# fluster

./: .env  .gitignore  .npmrc  .personal_alias.zsh  .syncpackrc.js  Makefile  README.md  build_env.json  cargo.toml  history.txt  license  melos.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pubspec.yaml  quick.py  uv.toml
apps/fluster/src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
apps/fluster/src-tauri/capabilities/: default.json
apps/fluster/src-tauri/icons/: icon.icns
apps/fluster/src-tauri/migrations/: 0001_initial_tables.sql
apps/fluster/src-tauri/migrations/00000000000000_diesel_initial_setup/: up.sql
apps/fluster/src-tauri/src/: lib.rs  main.rs
apps/fluster/src-tauri/src/core/: mod.rs
apps/fluster/src-tauri/src/core/database/: db.rs  db_entity_utils.rs  mod.rs
apps/fluster/src-tauri/src/core/database/tables/: mod.rs  settings.rs  snippet.rs  table_paths.rs  topic.rs
apps/fluster/src-tauri/src/core/db/: db.rs  initialize_database.rs  mod.rs  schema.surql  utils.rs
apps/fluster/src-tauri/src/core/db/entities/bibliography/: bib_entry.rs  reading_list.rs
apps/fluster/src-tauri/src/core/db/entities/mdx_note/: mod.rs  (+3 more)
apps/fluster/src-tauri/src/core/db/tables/: mod.rs  shared_taggable_schema.rs  subject.rs  table_paths.rs  tag.rs  topic.rs
apps/fluster/src-tauri/src/core/events/: mod.rs  set_db_connection_uri.rs  show_toast.rs
apps/fluster/src-tauri/src/core/models/: mod.rs
apps/fluster/src-tauri/src/core/models/actions/: global_action.rs
apps/fluster/src-tauri/src/core/models/bibliography/: bib_file.rs
apps/fluster/src-tauri/src/core/models/front_matter/: front_matter_model.rs  mod.rs
apps/fluster/src-tauri/src/core/models/mdx_note_group/: mdx_note.rs  mdx_note_group.rs  mod.rs
apps/fluster/src-tauri/src/core/models/params/: mod.rs  sync_mdx_typescript_params.rs
apps/fluster/src-tauri/src/core/models/settings/: mod.rs  setting_input_key.rs  setting_item.rs  setting_page.rs  setting_page_id.rs  setting_section.rs
apps/fluster/src-tauri/src/core/models/taggable/: mod.rs  shared_taggable_model.rs  subject_entity.rs  subject_model.rs  tag_entity.rs  tag_model.rs  tag_snippet_join.rs  tag_snippet_join_entity.rs  tag_snippet_join_model.rs  taggable_model.rs  topic_entity.rs  topic_model.rs  types.rs
apps/fluster/src-tauri/src/core/sync/: mod.rs  sync_local_database.rs
apps/fluster/src-tauri/src/core/sync/parse_directory/: mod.rs
apps/fluster/src-tauri/src/core/types/: mod.rs
apps/fluster/src-tauri/src/core/types/common_structs/: mod.rs  parsed_content_result.rs
apps/fluster/src-tauri/src/core/types/constants/: database_constants.rs  mod.rs  supported_syntax_theme.rs
apps/fluster/src-tauri/src/core/types/enums/: global_action_id.rs  keymap_entry_type.rs  parsable_file_extension.rs  setting_page_ids.rs  taggable_type.rs
apps/fluster/src-tauri/src/core/types/errors/: errors.rs  user_message_error_abstract.rs
apps/fluster/src-tauri/src/core/types/traits/: db_entity.rs  mod.rs  with_entity.rs
apps/fluster/src-tauri/src/core/utils/: array_utils.rs  date_utils.rs  mod.rs  random_utils.rs  stringify_i64.rs
apps/fluster/src-tauri/src/core/utils/file_system/: fs_commands.rs  fs_utils.rs  mod.rs
apps/fluster/src-tauri/src/core/utils/initialize/: initialize_database.rs  initialize_desktop.rs  mod.rs
apps/fluster/src-tauri/src/core/utils/search/: get_text_similarity.rs  mod.rs
apps/fluster/src-tauri/src/features/: mod.rs
apps/fluster/src-tauri/src/features/ai/: ai_client.rs  mod.rs  static_defaults.rs
apps/fluster/src-tauri/src/features/ai/ai_providers/: ai_provider.rs  local_ai_provider.rs  mod.rs
apps/fluster/src-tauri/src/features/bibliography/commands/: mod.rs
apps/fluster/src-tauri/src/features/bibliography/data/: bib_entry_entity.rs  bib_entry_model.rs  bib_file.rs  mod.rs
apps/fluster/src-tauri/src/features/dashboard/: get_dashboard_data.rs  mod.rs
apps/fluster/src-tauri/src/features/dictionary/: dictionary_entry.rs  dictionary_entry_entity.rs  dictionary_entry_model.rs  mod.rs
apps/fluster/src-tauri/src/features/editor/: write_file.rs
apps/fluster/src-tauri/src/features/embedded_docs/: get_embedded_doc_by_id.rs  mod.rs
apps/fluster/src-tauri/src/features/embedded_docs/data/: internal_embedded_docs_id.rs  mod.rs
apps/fluster/src-tauri/src/features/health/: get_health_report.rs  mod.rs
apps/fluster/src-tauri/src/features/math/: copy_mathjax_dir.rs  get_mathjax_path.rs  mod.rs
apps/fluster/src-tauri/src/features/math/commands/: get_equation_by_id.rs  get_equations.rs  mod.rs  read_mathjax_file.rs  save_equation.rs  save_equation_snippet.rs
apps/fluster/src-tauri/src/features/math/data/: equation_entity.rs  equation_model.rs  equation_snippet_entity.rs  equation_snippet_model.rs  equation_tag_entity.rs  equation_tag_model.rs  mod.rs
apps/fluster/src-tauri/src/features/mdx/: mod.rs  read_mdx_from_fs.rs
apps/fluster/src-tauri/src/features/mdx/actions/: mod.rs  read_mdx_file.rs  save_mdx_note_groups.rs
apps/fluster/src-tauri/src/features/mdx/data/: front_matter_entity.rs  front_matter_model.rs  mdx_note_entity.rs  mdx_note_equation_entity.rs  mdx_note_equation_model.rs  mdx_note_group.rs  mdx_note_model.rs  mdx_note_snippet_entity.rs  mdx_note_snippet_model.rs  mdx_note_tag_entity.rs  mdx_note_tag_model.rs  mod.rs
apps/fluster/src-tauri/src/features/router/: mod.rs  navigation_item.rs
apps/fluster/src-tauri/src/features/search/: mod.rs  types.rs
apps/fluster/src-tauri/src/features/search/commands/: get_note_summaries.rs  mod.rs
apps/fluster/src-tauri/src/features/search/data/: mod.rs  search_params.rs
apps/fluster/src-tauri/src/features/settings/: delete_setting_state.rs  get_setting_state.rs  mod.rs  save_setting_state.rs  settings_entity.rs  settings_model.rs
apps/fluster/src-tauri/src/features/snippets/: delete_snippet_by_id.rs  get_snippet_by_id.rs  get_snippet_params.rs  get_snippets.rs  mod.rs  save_snippet.rs  snippet_entity.rs  snippet_model.rs  syntax_supported_language.rs
apps/fluster/src-tauri/src/features/task_manager/: mod.rs  task_entity.rs  task_model.rs
(+839 files in other folders)
