[package]
name = "fluster"
version = "0.1.0"
description = "Free, open source academic note taking."
authors = ["Andrew Iglinski <fluster.eyeoh@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fluster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.2.1"
tauri-plugin-deep-link = "2"
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-store = "2"
typeshare.workspace = true
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.22", features = ["chrono", "derive"] }
tauri-plugin-log = "2"
# specta = { version = "1.0.5", features = ["tokio", "chrono", "tauri"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
