[package]
name = "fluster"
version = "0.1.0"
description = "Free, open source academic note taking."
authors = ["Andrew Iglinski <fluster.eyeoh@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fluster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[profile.dev.package.sqlx-macros]
opt-level = 3

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["specta", "test"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.2.1"
tauri-plugin-deep-link = "2"
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-store = "2"
typeshare.workspace = true
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.22", features = ["chrono", "derive"] }
fluster_test_utils = { path = "../../../packages/fluster_test_utils/" }
tauri-plugin-log = "2"
specta-typescript = "0.0.9"
log = "0.4.27"
crossbeam = { version = "0.8.4", features = [
    "alloc",
    "std",
    "crossbeam-channel",
] }
diesel-async.workspace = true
enum-iterator = "2.1.0"
diesel = { workspace = true, features = [
    "postgres",
    "postgres_backend",
    "serde_json",
    "chrono",
    "r2d2",
] }
regex = "1.11.1"
biblatex = "0.10.0"
dirs.workspace = true
tokio = { version = "1.45.0", features = ["fs", "full"] }
thiserror.workspace = true
chrono = { workspace = true, features = ["serde"] }
gray_matter.workspace = true
ignore = "0.4.23"
filetime = "0.2.25"
strsim = "0.11.1"
crossbeam-channel = "0.5.15"
rayon.workspace = true
strum = "0.27.1"
strum_macros = "0.27.1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
sea-query = "0.32.5"
sea-orm = { version = "1.1.11", features = [
    "sqlx-postgres",
    "macros",
    "with-chrono",
    "with-json",
    "mock",
] }
embed-file = "0.2.0"
postgresql_extensions = "0.18.3"
pgvector = "0.4.1"
postgresql_embedded = { version = "0.18.3", features = ["tokio"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
