[package]
name = "fluster"
version = "0.1.0"
description = "Free, open source academic note taking."
authors = ["Andrew Iglinski <fluster.eyeoh@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fluster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
plotly = { version = "0.12", features = [
    "kaleido",
    "kaleido_download",
    "plotly_ndarray",
] }
tauri = { version = "2", features = ["tray-icon", "specta", "test"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-dialog = "2"
tauri-plugin-devtools = "2.0.0"
typeshare.workspace = true
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.22", features = ["chrono", "derive"] }
fluster_test_utils = { path = "../../../packages/fluster_test_utils/" }
tauri-plugin-log = "2"
specta-typescript = "0.0.9"
log = "0.4.27"
crossbeam = { version = "0.8.4", features = [
    "alloc",
    "std",
    "crossbeam-channel",
] }
enum-iterator = "2.1.0"
regex = "1.11.1"
biblatex = { version = "0.10.0", features = ["serde"] }
dirs.workspace = true
tokio = { version = "1.45.0", features = ["fs", "full"] }
thiserror.workspace = true
# chrono = { features = ["serde"] }
gray_matter.workspace = true
ignore = "0.4.23"
filetime = "0.2.25"
strsim = "0.11.1"
crossbeam-channel = "0.5.15"
rayon.workspace = true
strum = "0.27.1"
strum_macros = "0.27.1"
sea-query = "0.32.5"
embed-file = "0.2.0"
include_dir.workspace = true
uuid = { version = "1.17.0", features = ["v4"] }
lancedb = { version = "0.19", features = ["polars"] }
chrono = { workspace = true, features = ["now", "serde"] }
arrow-schema = "54.1"
arrow-array = "54.1"
ollama-rs = { version = "0.3.1", features = ["stream"] }
futures-util = "0.3.31"
llm = "1.2.9"
futures = "0.3.31"
serde_arrow = { version = "0.13.3", features = ["arrow-54"] }
genai = "0.3.5"
kalosm = { version = "0.4.0", features = ["full"] }
rig-core = "0.12.0"
rig-lancedb = "0.2.10"
fast_qr = { version = "0.13.0", features = ["svg"] }


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
